manifests/base/namespace/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: taskapp
  labels:
    name: taskapp
